--- a/css/desktop.css
+++ b/css/desktop.css
@@ -8,12 +8,16 @@
         align-items: center;
     }
 
-    .foto-produto {
-        width: 300px;
+    .desktop {
+        display: block;
+        width: 280px;
         height: 400px;
-        background: url('/images/image-product-desktop.jpg') no-repeat;
-        background-size: contain;
         border-radius: 10px 0 0 10px;
+        margin-right: 30px;
+    }
+    
+    .mobile {
+        display: none;
     }
 
     .descricao {
